--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "description": "",
     "devDependencies": {
         "@eslint/js": "^9.30.1",
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.6.2",
         "eslint": "^9.30.1",
         "globals": "^16.3.0",
@@ -31,10 +33,14 @@
     "dependencies": {
         "@prisma/client": "^6.19.2",
         "axios": "^1.10.0",
+        "bcrypt": "^6.0.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.3",
         "cors": "^2.8.5",
         "dotenv": "^17.0.1",
         "express": "^5.1.0",
         "http": "^0.0.1-security",
-        "https": "^1.0.0"
+        "https": "^1.0.0",
+        "jsonwebtoken": "^9.0.3"
     }
 }
