--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2023",
         "module": "CommonJS",
         "lib": ["ES2023"],
-        "rootDir": "./src",
+        "rootDir": ".",
         "outDir": "./dist",
         "strict": true,
         "moduleResolution": "node",
@@ -14,6 +14,9 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "resolveJsonModule": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "strictPropertyInitialization": false,
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
