--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.6.2",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "eslint": "^9.30.1",
         "globals": "^16.3.0",
         "prettier": "3.6.2",
@@ -43,6 +45,8 @@
         "express": "^5.1.0",
         "http": "^0.0.1-security",
         "https": "^1.0.0",
-        "jsonwebtoken": "^9.0.3"
+        "jsonwebtoken": "^9.0.3",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
