--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
             "@/*": ["src/*"]
         }
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "prisma/**/*"],
     "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
