--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
         "dev": "tsx watch --env-file=.env src/index.ts",
         "build": "npx prisma generate && tsc && tsc-alias",
         "format": "npx prettier . --write",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "prisma:push": "npx prisma db push",
+        "test": "dotenv -e .test.env -- jest",
+        "test:watch": "dotenv -e .test.local.env -- jest --watch",
+        "test:coverage": "dotenv -e .test.local.env -- jest --coverage",
+        "db:test:up": "docker-compose up test-db -d",
+        "db:test:down": "docker-compose stop test-db",
+        "prisma:push:test": "dotenv -e .test.env -- npx prisma db push",
+        "prisma:push:all": "npm run prisma:push && npm run prisma:push:test",
         "docker:build": "docker build --platform linux/amd64 -t altnbsmehmet/case-study-task-management-api .",
         "docker:push": "docker push altnbsmehmet/case-study-task-management-api:latest",
         "docker:build-push": "npm run docker:build && npm run docker:push"
@@ -22,14 +27,21 @@
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.6.2",
+        "@types/supertest": "^6.0.3",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.8",
+        "dotenv-cli": "^11.0.0",
         "eslint": "^9.30.1",
         "globals": "^16.3.0",
+        "jest": "^30.2.0",
         "prettier": "3.6.2",
         "prisma": "^6.19.2",
+        "supertest": "^7.2.2",
+        "ts-jest": "^29.4.6",
+        "ts-node": "^10.9.2",
         "tsc-alias": "^1.8.16",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.21.0",
